--- a/src/app.css
+++ b/src/app.css
@@ -7,7 +7,9 @@
 }
 
 .arrow-left,
-.arrow-right {
+.arrow-right,
+.arrow-right-inactive,
+.arrow-left-inactive {
   height: 20;
   width: 20;
   background-repeat: no-repeat;
@@ -17,6 +19,12 @@
 
 .arrow-left {
   background-image: url("~/app/assets/arrowLeft.png");
+}
+.arrow-left-inactive {
+  background-image: url("~/app/assets/arrowLeft_inactive.png");
+}
+.arrow-right-inactive {
+  background-image: url("~/app/assets/arrowRight_inactive.png");
 }
 .arrow-right {
   background-image: url("~/app/assets/arrowRight.png");
